@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-22T08:08:05Z",
-  "count_outdated" : 1744,
-  "uniques_outdated" : 517,
-  "count" : 1757,
-  "uniques" : 527,
+  "timestamp" : "2022-08-23T00:40:23Z",
+  "count_outdated" : 1746,
+  "uniques_outdated" : 518,
+  "count" : 1759,
+  "uniques" : 528,
   "clones" : [
-    {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 2,
@@ -53,6 +46,13 @@
       "count_minmax": [ 2, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
