@@ -3,11 +3,6 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2022-08-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -36,6 +31,11 @@
       "timestamp": "2022-08-21T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
